ui: fix layout issues caused by filter

--- a/src/components/ScrollableTabs/scrollable-tabs.css
+++ b/src/components/ScrollableTabs/scrollable-tabs.css
@@ -1,7 +1,6 @@
 .scrollable-tabs-container {
-  font-family: "Roboto", sans-serif;
   background: #000;
-  max-width: 700px;
+  max-width: 100%;
   margin: 16px auto;
   border-radius: 4px;
   overflow: hidden;
@@ -9,8 +8,8 @@
 }
 
 .scrollable-tabs-container svg {
-  width: 24px;
-  height: 24px;
+  width: 36px;
+  height: 36px;
   padding: 8px;
   cursor: pointer;
   color: #fff;
